--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,8 @@ DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=pub
 ACCESS_TOKEN_SECRET="averysecurestring"
 REFRESH_TOKEN_SECRET="anotherverysecurestring"
 COOKIE_SECRET="yetanotherverysecurestring"
+
+OAUTH_TWITTER_ID="arealtwitteroauthid"
+OAUTH_TWITTER_SECRET="arealtwitteroauthsecret"
+OAUTH_GOOGLE_ID="arealgoogleoauthid"
+OAUTH_GOOGLE_SECRET="arealgoogleoauthsecret"
