--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "fastify-cookie": "^5.4.0",
     "fastify-cors": "^6.0.2",
     "fastify-helmet": "^5.3.2",
+    "fastify-oauth2": "^4.4.0",
     "fastify-passport": "^0.4.3",
     "fastify-plugin": "^3.0.0",
     "fastify-redis": "^4.3.3",
